# simple-covid19-flask-app

./: README.md  app.py  data_scrap.py  json_data_manimulation.py  pyproject.toml
static/: style.css
templates/: corona_live.html  index.html  layout.html
