[tool.poetry]
name = "simple-covid19-flask-app"
version = "0.1.0"
description = ""
authors = ["Lee Hyungi <hyungi.lee.622@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
